--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
     <script src="app/Init/init.js"></script>
     <script src="app/services/app.filter.js"></script>
     <script src="app/services/appData.factory.js"></script>
+    <script src="app/services/app.service.js"></script>
     <script src="app/list.js"></script>
     <script src="app/item.js"></script>
 
