--- a/app/list.html
+++ b/app/list.html
@@ -3,11 +3,12 @@
     An Angular app template, with Uber-Simple Implementation of <a href="https://github.com/angular-ui/ui-router" target="_blank">ui-router</a>
      and <a href=" https://material.angularjs.org/latest/" target="_blank">Angular Material</a>, along with basic examples of filters, factories and services.
     <md-content>
-        <md-list>
+        <md-list class="list-border" layout-margin>
             <md-list-item ng-repeat="item in vm.allItems">
-                <p ui-sref="item({itemId:item.ItemId,itemTitle:item.Title})"> {{item.Title}} </p>
+                <p ui-sref="item({itemId:item.itemId})"> {{item.name}} </p>
                 <md-divider ng-if="!$last"></md-divider>
             </md-list-item>
         </md-list>
     </md-content>
 </div>
+
